--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,4 +15,11 @@ header {
   background-color: #fff;
   color: #d21f1f;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  position: fixed;
+  width: 100%;
+  height: 3rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
