--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,13 +13,82 @@ header {
 
 .nav {
   background-color: #fff;
-  color: #d21f1f;
+  color: #000000;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
   position: fixed;
   width: 100%;
   height: 3rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.nav div:nth-child(2){
+  display: flex;
+  align-items: center;
+  padding-right: 1rem;
+  font-weight: bolder;
+}
+
+.nav div:nth-child(1) img {
+  padding: 0 0.5rem;
+}
+
+.nav div:nth-child(2) a {
+  padding: 0 1rem;
+}
+
+@media (min-width: 801px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .full-nav {
+    display: none;
+  }
+
+  .mobile-nav {
+    padding: 0;
+  }
+
+  .fa-bars {
+    padding: 0.5rem;
+  }
+}
+
+/* overlay */
+/* mobile overlay */
+
+#overlay {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2;
+}
+
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.overlay-text a {
+  display: block;
+  color: #fff;
+  font-weight: 600;
+  text-decoration: none;
+  font-size: 1.5rem;
+  padding: 0.5rem 2rem;
+}
+
+.fa-times {
+  font-size: 4rem;
+  color: #fff;
+  padding: 1rem;
 }
